# FinTech-Compliance-Document-Simplifier

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: deploy-backend.yml  infrastructure.yml
app/: config.py  main.py
app/api/v1/: simplifier_endpoint.py
app/models/: __init__.py  anthropic_models.py  simplifier_models.py
app/services/: file_handler.py  link_handler.py  llm_service.py  prompts.py  simplifier.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: simplifier_endpoint.py
backend/app/services/: file_handler.py  llm_service.py  pdf_service.py  prompts.py  simplifier.py
docs/: README.md  architecture.md  cicd.md  deployment-guide.md  helm-kustomize.md  prerequisites.md  terraform-resources.md  troubleshooting.md
frontend/: Dockerfile  index.html  main.js  nginx.conf  package-lock.json  package.json  style.css  vite.config.js
